data/all_generated_tests/raw_wast_tests/block_StackCorruption_1875.wast
;; 6. **Test Description**: Add a block that logically results in stack underflow by having fewer initial stack values than required by the block type and execute code that depends on a minimally populated stack.    - **Constraint**: Ensures that initial stack states are validated against block type requirements.    - **Relation to Stack Corruption**: Missing initial stack values will expose improper stack checks and handling, leading to corruption.

(assert_invalid
  (module (func $stack-underflow
    (i32.const 1)
    (block (result i32 i32) (i32.const 2) (drop) (end))
  ))
  "type mismatch"
)